# wayout

./: CONTRIBUTING.md  README.md  meson.build  meson_options.txt
doc/: wayout.1.scd
protocol/: meson.build
src/: buffer.c  buffer.h  colour.c  colour.h  misc.c  misc.h  output.c  output.h  render.c  render.h  surface.c  surface.h  wayout.c  wayout.h
